noinst_LTLIBRARIES = libdemo.la
libdemo_la_CXXFLAGS = -I$(top_srcdir)
libdemo_la_SOURCES = \
    Demo.cc \
    HAtomDemo.cc \
    HeAtomDemo.cc \
    SHODemo.cc \
    SpinDemo.cc \
    WireDemo.cc
noinst_HEADERS = \
    Demo.h \
    HAtomDemo.h \
    HeAtomDemo.h \
    SHODemo.h \
    SpinDemo.h \
    WireDemo.h
