noinst_LTLIBRARIES = libemarate.la
libemarate_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libemarate_la_SOURCES = \
    EMARateAction.cc \
    EMARateEstimator.cc \
    EMARateMover.cc
noinst_HEADERS = \
    EMARateAction.h \
    EMARateEstimator.h \
    EMARateMover.h

