noinst_LTLIBRARIES = libestimator.la
libestimator_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libestimator_la_SOURCES = \
	AngularMomentumEstimator.cc \
	BondLengthEstimator.cc \
	BoxEstimator.cc \
	ConductanceEstimator.cc \
	ConductivityEstimator.cc \
	ConductivityEstimator2D.cc \
	CoulombEnergyEstimator.cc \
	CountCountEstimator.cc \
	DensCountEstimator.cc \
	DensDensEstimator.cc \
	DensityCurrentEstimator.cc \
	DensityEstimator.cc \
	DiamagneticEstimator.cc \
	DipoleMomentEstimator.cc \
	DynamicPCFEstimator.cc \
	EIndEstimator.cc \
	EwaldCoulombEstimator.cc \
	FreeEnergyEstimator.cc \
	FrequencyEstimator.cc \
	JEstimator.cc \
	PermutationEstimator.cc \
	PositionEstimator.cc \
	SKOmegaEstimator.cc \
	SpinChargeEstimator.cc \
	ThermoEnergyEstimator.cc \
	VIndEstimator.cc \
	VirialEnergyEstimator.cc \
	WindingEstimator.cc
noinst_HEADERS = \
	AngularMomentumEstimator.h \
	BondLengthEstimator.h \
	BoxEstimator.h \
	ConductanceEstimator.h \
	ConductivityEstimator.h \
	ConductivityEstimator2D.h \
	CoulombEnergyEstimator.h \
	CountCountEstimator.h \
	DensCountEstimator.h \
	DensDensEstimator.h \
	DensityCurrentEstimator.h \
	DensityEstimator.h \
	DiamagneticEstimator.h \
	DipoleMomentEstimator.h \
	DynamicPCFEstimator.h \
	EIndEstimator.h \
	EwaldCoulombEstimator.h \
	FreeEnergyEstimator.h \
	FrequencyEstimator.h \
	JEstimator.h \
	PairCFEstimator.h \
	PermutationEstimator.h \
	PositionEstimator.h \
	SKOmegaEstimator.h \
	SpinChargeEstimator.h \
	SpinChoiceDensityEstimator.h \
	SpinChoicePCFEstimator.h \
	ThermoEnergyEstimator.h \
	VIndEstimator.h \
	VirialEnergyEstimator.h \
	WindingEstimator.h \
	ZeroVarDensityEstimator.h