noinst_LTLIBRARIES = libfixednode.la
libfixednode_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libfixednode_la_SOURCES = \
    AnisotropicNodes.cc \
    AugmentedNodes.cc \
    ExcitonNodes.cc \
    FixedNodeAction.cc \
    FreeParticleNodes.cc \
    FreePartNodesNoUpdate.cc \
    GroundStateSNode.cc \
    GroundStateWFNodes.cc \
    NodeModel.cc \
    NodeTester.cc \
    SHONodes.cc \
    SHORealNodes.cc \
    SpinChoiceFixedNodeAction.cc \
    WireNodes.cc
noinst_HEADERS = \
    AnisotropicNodes.h \
    AugmentedNodes.h \
    ExcitonNodes.h \
    FixedNodeAction.h \
    FreeParticleNodes.h \
    FreePartNodesNoUpdate.h \
    GroundStateSNode.h \
    GroundStateWFNodes.h \
    NodeModel.h \
    NodeTester.h \
    SHONodes.h \
    SHORealNodes.h \
    SpinChoiceFixedNodeAction.h \
    WireNodes.h