noinst_LTLIBRARIES = libfixednode.la
libfixednode_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libfixednode_la_SOURCES = \
    AnisotropicNodes.cc \
    AtomicOrbitalDM.cc \
    Atomic1sDM.cc \
    Atomic2spDM.cc \
    AugmentedNodes.cc \
    ExcitonNodes.cc \
    FixedNodeAction.cc \
    FixedPhaseAction.cc \
    FreeParticleNodes.cc \
    FreePartNodesNoUpdate.cc \
    GroundStateSNode.cc \
    GroundStateWFNodes.cc \
    NodeModel.cc \
    NodeTester.cc \
    SHONodes.cc \
    SHOPhase.cc \
    SHORealNodes.cc \
    SpinChoiceFixedNodeAction.cc \
    Spin4DPhase.cc \
    WireNodes.cc
noinst_HEADERS = \
    AnisotropicNodes.h \
    AtomicOrbitalDM.h \
    Atomic1sDM.h \
    Atomic2spDM.h \
    AugmentedNodes.h \
    ExcitonNodes.h \
    FixedNodeAction.h \
    FixedPhaseAction.h \
    FreeParticleNodes.h \
    FreePartNodesNoUpdate.h \
    GroundStateSNode.h \
    GroundStateWFNodes.h \
    NodeModel.h \
    NodeTester.h \
    PhaseModel.h \
    SHONodes.h \
    SHOPhase.h \
    SHORealNodes.h \
    SpinChoiceFixedNodeAction.h \
    Spin4DPhase.h \
    WireNodes.h
