noinst_LTLIBRARIES = libparser.la
libparser_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libparser_la_SOURCES = \
    ActionParser.cc \
    EstimatorParser.cc \
    MainParser.cc \
    PIMCParser.cc \
    MainParser.cc \
    SimInfoParser.cc \
    XMLParser.cc \
    XMLUnitParser.cc
noinst_HEADERS = \
    ActionParser.h \
    EstimatorParser.h \
    MainParser.h \
    PIMCParser.h \
    MainParser.h \
    SimInfoParser.h \
    XMLParser.h \
    XMLUnitParser.h