noinst_LTLIBRARIES = libsampler.la
libsampler_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libsampler_la_SOURCES = \
        AlternatingParticleChooser.cc \
        CollectiveMover.cc \
        DampedFreeTensorMover.cc \
        DisplaceMoveSampler.cc \
        DoubleDisplaceMoveSampler.cc \
        DoubleMLSampler.cc \
        DoubleSectionChooser.cc \
        ExchangeMover.cc \
        FreeMover.cc \
        FreeMoverPBC.cc \
        FreeTensorMover.cc \
        HyperbolicMover.cc \
        MiddleSectionChooser.cc \
        ModelSampler.cc \
        MultiLevelSampler.cc \
        MultiSpeciesParticleChooser.cc \
        NonZeroSectionChooser.cc \
        PairChooser.cc \
        ParticleChooser.cc \
        PermutationChooser.cc \
        RandomPermutationChooser.cc \
        SectionChooser.cc \
        SimpleParticleChooser.cc \
        SpeciesParticleChooser.cc \
        SpinModelSampler.cc \
        SpinStatePermutationChooser.cc \
        TwoPairChooser.cc \
        UniformMover.cc \
        WalkingChooser.cc

noinst_HEADERS = \
        AlternatingParticleChooser.h \
        CollectiveMover.h \
        DampedFreeTensorMover.h \
        DisplaceMoveSampler.h \
        DoubleDisplaceMoveSampler.h \
        DoubleMLSampler.h \
        DoubleSectionChooser.h \
        ExchangeMover.h \
        FreeMover.h \
        FreeMoverPBC.h \
        FreeTensorMover.h \
        HyperbolicMover.h \
        MiddleSectionChooser.h \
        ModelSampler.h \
        Mover.h \
        MultiLevelSampler.h \
        MultiLevelSamplerInterface.h \
        MultiSpeciesParticleChooser.h \
        NonZeroSectionChooser.h \
        PairChooser.h \
        ParticleChooser.h \
        PermutationChooser.h \
        RandomPermutationChooser.h \
        SectionChooser.h \
        SimpleParticleChooser.h \
        SpeciesParticleChooser.h \
        SpinModelSampler.h \
        SpinStatePermutationChooser.h \
        TwoPairChooser.h \
        UniformMover.h \
        WalkingChooser.h
