noinst_LTLIBRARIES = libspin.la
libspin_la_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)
libspin_la_SOURCES = \
    FreeSpinMover.cc \
    MainSpinParser.cc \
    LatticeSpinPhase.cc \
    SpinSetter.cc \
    SpinAction.cc \
    SpinEstimator.cc \
    SpinFixedPhaseAction.cc \
    SpinMover.cc \
    SpinPhase.cc
noinst_HEADERS = \
    FreeSpinMover.h \
    MainSpinParser.h \
    LatticeSpinPhase.h \
    SpinSetter.h \
    SpinAction.h \
    SpinEstimator.h \
    SpinFixedPhaseAction.h \
    SpinMover.h \
    SpinPhase.h \
    SpinPhaseModel.h
