noinst_LTLIBRARIES = libstats.la
libstats_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/contrib/blitz-0.9
libstats_la_SOURCES = \
    AccRejEstimator.cc \
    ArrayEstimator.cc \
    ArrayBlockedEstimator.cc \
    AsciiReportBuilder.cc \
    EstimatorReportBuilder.cpp \
    EstimatorManager.cc \
    H5ReportBuilder.cc \
    H5ScalarReportWriter.cpp \
    MPIManager.cc \
    ReportWriters.cpp \
    ScalarEstimator.cc \
    ScalarReportWriter.cpp \
    StdoutReportBuilder.cc \
    Units.cc
noinst_HEADERS = \
    AccRejEstimator.h \
    ArrayEstimator.h \
    ArrayBlockedEstimator.h \
    AsciiReportBuilder.h \
    BlitzArrayBlkdEst.h \
    Estimator.h \
    EstimatorManager.h \
    EstimatorReportBuilder.h \
    H5ReportBuilder.h \
    H5ScalarReportWriter.h \
    MPIManager.h \
	ReportWriters.h \
    ScalarEstimator.h \
    ScalarReportWriter.h \
    StdoutReportBuilder.h \
    Units.h
