noinst_LTLIBRARIES = libstats.la
libstats_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/contrib/blitz-0.9
libstats_la_SOURCES = \
    AccRejEstimator.cc \
    ArrayEstimator.cc \
    AsciiReportBuilder.cc \
    AsciiScalarReportWriter.cpp \
    EstimatorIterator.cpp \
    EstimatorReportBuilder.cpp \
    EstimatorManager.cc \
    H5ArrayReportWriter.cpp \
    H5ReportBuilder.cc \
    H5ScalarReportWriter.cpp \
    MPIManager.cc \
    ReportWriters.cpp \
    ScalarEstimator.cc \
    StdoutAccRejReportWriter.cpp \
    StdoutArrayReportWriter.cpp \
    StdoutScalarReportWriter.cpp \
    StdoutReportBuilder.cc \
    Units.cc
noinst_HEADERS = \
    AccRejEstimator.h \
    ArrayEstimator.h \
    AsciiReportBuilder.h \
    AsciiScalarReportWriter.h \
    BlitzArrayBlkdEst.h \
    Estimator.h \
    EstimatorIterator.h \
    EstimatorManager.h \
    EstimatorReportBuilder.h \
    H5ArrayReportWriter.h \
    H5ReportBuilder.h \
    H5ScalarReportWriter.h \
    MPIManager.h \
    NullArrayReportWriter.h \
    NullAccRejReportWriter.h \
    ReportWriterInterface.h \
	ReportWriters.h \
    ScalarEstimator.h \
    StdoutAccRejReportWriter.h \
    StdoutArrayReportWriter.h \
    StdoutScalarReportWriter.h \
    StdoutReportBuilder.h \
    Units.h
