noinst_LTLIBRARIES = libstats.la
libstats_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libstats_la_SOURCES = \
    AccRejEstimator.cc \
    ArrayEstimator.cc \
    EstimatorIterator.cpp \
    EstimatorReportBuilder.cpp \
    EstimatorManager.cc \
    MPIManager.cc \
    PartitionedScalarAccumulator.cpp \
    ReportWriters.cpp \
    ScalarEstimator.cc \
    SimpleScalarAccumulator.cpp \
    Units.cc \
    ascii/AsciiReportBuilder.cc \
    ascii/AsciiScalarReportWriter.cpp \
    hdf5/H5ArrayReportWriter.cpp \
    hdf5/H5Lib.cpp \
    hdf5/H5ReportBuilder.cc \
    hdf5/H5ScalarReportWriter.cpp \
    hdf5/H5SplitScalarReportWriter.cpp \
    stdout/StdoutAccRejReportWriter.cpp \
    stdout/StdoutArrayReportWriter.cpp \
    stdout/StdoutScalarReportWriter.cpp \
    stdout/StdoutReportBuilder.cc
noinst_HEADERS = \
    AccRejEstimator.h \
    ArrayEstimator.h \
    BlitzArrayBlkdEst.h \
    Estimator.h \
    EstimatorIterator.h \
    EstimatorManager.h \
    EstimatorReportBuilder.h \
    ModelStateInterface.h \
    MPIManager.h \
    NullArrayReportWriter.h \
    NullAccRejReportWriter.h \
    PartitionedScalarAccumulator.h \
    ReportWriterInterface.h \
    ReportWriters.h \
	ScalarAccumulator.h \
    ScalarEstimator.h \
    SimpleScalarAccumulator.h \
    Units.h \
    ascii/AsciiReportBuilder.h \
    ascii/AsciiScalarReportWriter.h \
    hdf5/H5ArrayReportWriter.h \
    hdf5/H5Lib.h \
    hdf5/H5ReportBuilder.h \
    hdf5/H5ScalarReportWriter.h \
    hdf5/H5SplitScalarReportWriter.h \
    stdout/StdoutAccRejReportWriter.h \
    stdout/StdoutArrayReportWriter.h \
    stdout/StdoutScalarReportWriter.h \
    stdout/StdoutReportBuilder.h
