noinst_LTLIBRARIES = libutil.la
libutil_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libutil_la_SOURCES = \
	AperiodicGaussian.cc \
	EwaldSum.cc \
	Hungarian.cc \
	OptEwaldSum.cc \
	PairDistance.cc \
	PeriodicGaussian.cc \
	Permutation.cc \
	RandomNumGenerator.cc \
	SuperCell.cc \
	TradEwaldSum.cc \
	WireEwald.cc \
	erf.cpp \
	ipow.cpp \
	math/VPolyFit.cpp \
	propagator/Propagator.cpp \
	propagator/PropagatorGrid.cpp \
    startup/CommandLineParser.cpp \
    startup/Greeting.cpp \
    startup/MPILifecycle.cpp \
    startup/UsageMessage.cpp
noinst_HEADERS = \
	AperiodicGaussian.h \
	Distance.h \
	EwaldSum.h \
	Hungarian.h \
	OptEwaldSum.h \
	PairDistance.h \
	PeriodicGaussian.h \
	Permutation.h \
	RandomNumGenerator.h \
	SuperCell.h \
	TradEwaldSum.h \
	WireEwald.h \
	erf.h \
	gnugetopt.h \
	ipow.h \
	math/BLAS.h \
	math/VPolyFit.h \
	propagator/Propagator.h \
	propagator/PropagatorGrid.h \
    startup/CommandLineParser.h \
    startup/Greeting.h \
    startup/MPILifecycle.h \
    startup/UsageMessage.h
    
