noinst_LTLIBRARIES = libutil.la
libutil_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libutil_la_SOURCES = \
    AperiodicGaussian.cc \
    EwaldSum.cc \
    Hungarian.cc \
    OptEwaldSum.cc \
    PairDistance.cc \
    PeriodicGaussian.cc \
    Permutation.cc \
    RandomNumGenerator.cc \
    SuperCell.cc \
    TradEwaldSum.cc \
    WireEwald.cc \
    erf.cpp \
    ipow.cpp \
    fft/FFT1D.cpp \
    math/VPolyFit.cpp \
    propagator/GridParameters.cpp \
    propagator/GridSet.cpp \
    propagator/KineticGrid.cpp \
    propagator/PotentialGrid.cpp \
    propagator/Propagator1D.cpp \
    propagator/PropagatorGrid.cpp \
    shiny/ShinyManager.cpp \
    shiny/ShinyNode.cpp \
    shiny/ShinyNodePool.cpp \
    shiny/ShinyNodeState.cpp \
    shiny/ShinyOutput.cpp \
    shiny/ShinyTools.cpp \
    shiny/ShinyZone.cpp \
    startup/CommandLineParser.h \
    startup/CommandLineParser.cpp \
    startup/Greeting.cpp \
    startup/MPILifecycle.cpp \
    startup/UsageMessage.cpp
noinst_HEADERS = \
    AperiodicGaussian.h \
    Distance.h \
    EwaldSum.h \
    Hungarian.h \
    OptEwaldSum.h \
    PairDistance.h \
    PeriodicGaussian.h \
    Permutation.h \
    RandomNumGenerator.h \
    SuperCell.h \
    TradEwaldSum.h \
    WireEwald.h \
    erf.h \
    gnugetopt.h \
    ipow.h \
    fft/FFT1D.h \
    math/BLAS.h \
    math/VPolyFit.h \
    propagator/GridParameters.h \
    propagator/GridSet.h \
    propagator/KineticGrid.h \
    propagator/PotentialGrid.h \
    propagator/Propagator1D.h \
    propagator/PropagatorGrid.h \
    shiny/Shiny.h \
    shiny/ShinyConfig.h \
    shiny/ShinyData.h \
    shiny/ShinyMacros.h \
    shiny/ShinyManager.h \
    shiny/ShinyNode.h \
    shiny/ShinyNodePool.h \
    shiny/ShinyNodeState.h \
    shiny/ShinyOutput.h \
    shiny/ShinyPrereqs.h \
    shiny/ShinyTools.h \
    shiny/ShinyVersion.h \
    shiny/ShinyZone.h \
    startup/Greeting.h \
    startup/MPILifecycle.h \
    startup/UsageMessage.h

